--- a/package.json
+++ b/package.json
@@ -29,20 +29,27 @@
     "license": "MIT",
     "dependencies": {
         "better-sqlite3": "^8.5.0",
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^6.9.0",
         "helmet": "^7.0.0",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
+        "swagger-ui-express": "^5.0.0",
         "zod": "^3.21.4"
     },
     "devDependencies": {
         "@types/better-sqlite3": "^7.6.4",
+        "@types/compression": "^1.7.2",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.3",
         "@types/morgan": "^1.9.4",
+        "@types/multer": "^1.4.7",
         "@types/node": "^20.4.5",
+        "@types/swagger-ui-express": "^4.1.3",
         "@typescript-eslint/eslint-plugin": "^6.2.0",
         "@typescript-eslint/parser": "^6.2.0",
         "eslint": "^8.45.0",
