--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "mcp-mitre-attack",
-    "version": "0.1.0",
-    "description": "Multi-agent Coordination Platform (MCP) server for MITRE ATT&CK framework integration",
+    "version": "1.0.0",
+    "description": "Multi-agent Coordination Platform for MITRE ATT&CK framework integration",
     "main": "dist/index.js",
     "type": "module",
     "scripts": {
         "build": "tsc",
         "start": "node dist/index.js",
-        "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-        "test": "jest",
+        "dev": "ts-node src/index.ts",
+        "test": "mocha -r ts-node/register 'tests/**/*.test.ts'",
         "lint": "eslint . --ext .ts",
         "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
         "prepare": "husky install",
@@ -28,41 +28,48 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "better-sqlite3": "^8.5.0",
+        "axios": "^1.5.0",
+        "better-sqlite3": "^8.6.0",
+        "cheerio": "^1.0.0-rc.12",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-rate-limit": "^6.9.0",
         "helmet": "^7.0.0",
+        "langdetect": "^0.2.1",
+        "mammoth": "^1.6.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "pdf-parse": "^1.1.1",
         "swagger-ui-express": "^5.0.0",
         "zod": "^3.21.4"
     },
     "devDependencies": {
         "@types/better-sqlite3": "^7.6.4",
+        "@types/chai": "^4.3.5",
         "@types/compression": "^1.7.2",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
-        "@types/jest": "^29.5.3",
-        "@types/morgan": "^1.9.4",
-        "@types/multer": "^1.4.7",
-        "@types/node": "^20.4.5",
-        "@types/swagger-ui-express": "^4.1.3",
-        "@typescript-eslint/eslint-plugin": "^6.2.0",
-        "@typescript-eslint/parser": "^6.2.0",
-        "eslint": "^8.45.0",
+        "@types/mocha": "^10.0.1",
+        "@types/node": "^20.5.9",
+        "@types/sinon": "^10.0.16",
+        "@typescript-eslint/eslint-plugin": "^6.5.0",
+        "@typescript-eslint/parser": "^6.5.0",
+        "chai": "^4.3.8",
+        "eslint": "^8.48.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^5.0.0",
         "husky": "^8.0.3",
         "jest": "^29.6.2",
         "lint-staged": "^13.2.3",
+        "mocha": "^10.2.0",
         "nodemon": "^3.0.1",
         "prettier": "^3.0.0",
+        "sinon": "^15.2.0",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
-        "typescript": "^5.1.6"
+        "typescript": "^5.2.2"
     },
     "husky": {
         "hooks": {
