--- a/.env.example
+++ b/.env.example
@@ -11,10 +11,14 @@ MITRE_UPDATE_INTERVAL=86400000
 MITRE_CACHE_DIR=./cache/mitre
 
 # Azure OpenAI Configuration
-AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
-AZURE_OPENAI_API_KEY=your-api-key
+AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
+AZURE_OPENAI_API_KEY=your-api-key-here
+AZURE_OPENAI_DEPLOYMENT_NAME=your-gpt-deployment
 AZURE_OPENAI_API_VERSION=2023-05-15
-AZURE_OPENAI_DEPLOYMENT=your-deployment-name
+USE_AZURE_OPENAI=true
 
 # Security Configuration
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# Optional: Domain for Caddy (default: localhost)
+DOMAIN=example.com
