--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,6 @@
 version: '3.8'
 
 services:
-  app:
-    build:
-      context: .
-      dockerfile: ./docker/Dockerfile
-    container_name: mcp-mitre-attack
-    volumes:
-      - .:/app
-      - node_modules:/app/node_modules
-      - ./db:/app/db
-    ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=development
-      - PORT=3000
-      - DATABASE_PATH=/app/db/mcp.sqlite3
-      - LOG_LEVEL=debug
-    restart: unless-stopped
-    command: npm run dev
-
   backend:
     build:
       context: ./backend
@@ -57,8 +38,6 @@ services:
     restart: unless-stopped
     depends_on:
       - backend
-    ports:
-      - "127.0.0.1:8080:80"
     healthcheck:
       test: [ "CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80/index.html" ]
       interval: 30s
@@ -79,6 +58,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    environment:
+      - DOMAIN=${DOMAIN:-localhost}
     depends_on:
       - backend
       - frontend
@@ -86,7 +67,6 @@ services:
       - mcp-network
 
 volumes:
-  node_modules:
   mcp-data:
     name: mcp-data
   caddy-data:
