--- a/Caddyfile
+++ b/Caddyfile
@@ -23,7 +23,7 @@
         protocols h2 h1
     }
     
-    # Email for Let's Encrypt (set this via environment variable EMAIL)
+    # Email for Let's Encrypt
     email { $EMAIL }
 }
 
@@ -89,8 +89,8 @@ https:// { $DOMAIN:localhost } {
             header_up X-Forwarded-For { remote }
             header_up X-Forwarded-Proto { scheme }
             
-            # Health checks (assuming frontend serves /health)
-            health_path /health
+            # Health checks (assuming frontend serves /health or /health.html)
+            health_path /health.html
             health_interval 30s
             health_timeout 10s
             
@@ -150,46 +150,44 @@ https:// { $DOMAIN:localhost } {
     header @static {
         # Cache for 30 days
         Cache-Control "public, max-age=2592000"
-        # Remove ETag to improve cache performance
-        -ETag
     }
     
-    # Cache JS and CSS for longer periods (they contain hashes for cache busting)
+    # Cache JS and CSS with content hashes for longer periods
     @assets {
-        path *.*.js *.*.css # Adjust if your build process uses different hashing patterns
+        path *.*.js *.*.css # Matches files like main.hash.js or styles.hash.css
     }
     header @assets {
-        # Cache for 1 year
+        # Cache for 1 year (immutable)
         Cache-Control "public, max-age=31536000, immutable"
     }
 
     # No cache for HTML
     @html {
-        path *.html /
+        path *.html / # Matches HTML files and the root path
     }
     header @html {
         Cache-Control "no-cache, no-store, must-revalidate"
     }
-
-    # Error handling with custom pages (ensure frontend serves these at /404.html and /error.html)
+    
+    # Error handling with custom pages
     handle_errors {
         @404 {
             expression { http.error.status_code } == 404
         }
         handle @404 {
             rewrite * /404.html
-            reverse_proxy frontend:80
+            reverse_proxy frontend:80 # Serve the 404.html from the frontend service
         }
 
         @5xx {
-            expression { http.error.status_code } >= 500
+            expression { http.error.status_code } >= 500 && { http.error.status_code } < 600
         }
         handle @5xx {
             rewrite * /error.html
-            reverse_proxy frontend:80
+            reverse_proxy frontend:80 # Serve the error.html from the frontend service
         }
 
-        # Default error handler
+        # Default error handler for other errors
         handle {
             respond "{http.error.status_code} {http.error.status_text}" { http.error.status_code }
         }
