post-plan cleanup

--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,6 @@ AZURE_OPENAI_API_VERSION=2023-05-15
 USE_AZURE_OPENAI=true
 
 # Optional: Domain for Caddy (default: localhost)
-DOMAIN=example.com
+# For production, set this to your actual domain, e.g., DOMAIN=example.com
+# Caddy will then attempt to provision SSL certificates for this domain.
+DOMAIN=localhost
