--- a/Caddyfile
+++ b/Caddyfile
@@ -2,194 +2,55 @@
 {
     # Global options
     admin off
-    
-    # Structured logging configuration
     log {
         format json
-        output file /var/log/caddy/access.log {
-            roll_size 10MB
-            roll_keep 5
-            roll_keep_for 720h
-        }
     }
-    
-    # Global settings
-    servers {
-        protocol {
-            # Strict TLS settings
-            tls_min_version 1.2
-            tls_ciphers TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384 TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384 TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256 TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256 TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256 TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
-        }
-        protocols h2 h1
-    }
-    
-    # Email for Let's Encrypt
-    email { $EMAIL }
 }
 
-# HTTP to HTTPS redirect
-http:// { $DOMAIN:localhost } {
-    redir https:// { host } { uri } permanent
-}
-
-# Main site configuration
-https:// { $DOMAIN:localhost } {
-    # TLS configuration
-    tls {
-        # Use Let's Encrypt
-        issuer acme
-        # Enable OCSP stapling
-        ocsp_stapling 168h
-    }
-    
-    # Access logging
-    log {
-        output file /var/log/caddy/ { $DOMAIN }.access.log {
-            roll_size 10MB
-            roll_keep 5
-            roll_keep_for 720h
-        }
-        format json {
-            time_format iso8601
-            time_local
-        }
-    }
-
-    # API routing
+# Domain configuration - use environment variable or default to localhost
+{ $DOMAIN:localhost } {
+    # API proxy to backend
     handle_path /api/* {
         reverse_proxy backend:3001 {
             header_up Host { host }
             header_up X-Real-IP { remote }
             header_up X-Forwarded-For { remote }
             header_up X-Forwarded-Proto { scheme }
-            
-            # Health checks
-            health_path /api/health
-            health_interval 30s
-            health_timeout 10s
-            
-            # Load balancing (for future scaling)
-            lb_policy round_robin
-            lb_try_duration 30s
-            
-            # Timeouts
-            timeout 60s
-            
-            # Automatic failover
-            fail_duration 10s
-            max_fails 3
         }
     }
 
-    # Frontend routing (default)
+    # Reverse proxy for frontend (serves static assets and handles SPA routing)
     handle {
-        reverse_proxy frontend:80 {
+        reverse_proxy frontend:80 { # frontend service serves on port 80 internally
             header_up Host { host }
             header_up X-Real-IP { remote }
             header_up X-Forwarded-For { remote }
             header_up X-Forwarded-Proto { scheme }
-            
-            # Health checks (assuming frontend serves /health or /health.html)
-            health_path /health.html
-            health_interval 30s
-            health_timeout 10s
-            
-            # Load balancing (for future scaling)
-            lb_policy round_robin
-            
-            # Timeouts
-            timeout 30s
         }
     }
 
     # Compression
-    encode gzip zstd {
-        minimum_length 1024
-        match {
-            header Content-Type text/*
-            header Content-Type application/json
-            header Content-Type application/javascript
-            header Content-Type application/xml
-            header Content-Type application/wasm
-            header Content-Type image/svg+xml
-        }
-        level 6
-    }
+    encode gzip
 
     # Security headers
     header {
-        # Prevent MIME type sniffing
-        X-Content-Type-Options "nosniff"
-        
-        # Prevent embedding in frames
+        # Enable HSTS
+        Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+        # Prevent clickjacking
         X-Frame-Options "DENY"
-        
+        # Prevent MIME-sniffing
+        X-Content-Type-Options "nosniff"
         # Enable XSS protection
         X-XSS-Protection "1; mode=block"
-        
         # Control referrer information
         Referrer-Policy "strict-origin-when-cross-origin"
-        
-        # Content Security Policy
+        # Content Security Policy (adjust as needed for your frontend)
+        # This is a restrictive example, ensure it matches your frontend's needs
         Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' {$DOMAIN:localhost}/api;"
-        
-        # HTTP Strict Transport Security
-        Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-        
-        # Permissions Policy
-        Permissions-Policy "camera=(), microphone=(), geolocation=(), interest-cohort=()"
-        
-        # Remove Server header
-        -Server
     }
 
-    # Cache static assets by file type
-    @static {
-        path *.css *.js *.svg *.jpg *.jpeg *.png *.gif *.ico *.woff *.woff2 *.ttf *.eot
-    }
-    header @static {
-        # Cache for 30 days
-        Cache-Control "public, max-age=2592000"
-    }
-    
-    # Cache JS and CSS with content hashes for longer periods
-    @assets {
-        path *.*.js *.*.css # Matches files like main.hash.js or styles.hash.css
-    }
-    header @assets {
-        # Cache for 1 year (immutable)
-        Cache-Control "public, max-age=31536000, immutable"
-    }
-
-    # No cache for HTML
-    @html {
-        path *.html / # Matches HTML files and the root path
-    }
-    header @html {
-        Cache-Control "no-cache, no-store, must-revalidate"
-    }
-    
-    # Error handling with custom pages
+    # Error handling
     handle_errors {
-        @404 {
-            expression { http.error.status_code } == 404
-        }
-        handle @404 {
-            rewrite * /404.html
-            reverse_proxy frontend:80 # Serve the 404.html from the frontend service
-        }
-
-        @5xx {
-            expression { http.error.status_code } >= 500 && { http.error.status_code } < 600
-        }
-        handle @5xx {
-            rewrite * /error.html
-            reverse_proxy frontend:80 # Serve the error.html from the frontend service
-        }
-
-        # Default error handler for other errors
-        handle {
-            respond "{http.error.status_code} {http.error.status_text}" { http.error.status_code }
-        }
+        respond "{http.error.status_code} {http.error.status_text}" { http.error.status_code }
     }
 }
