--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - mcp-data:/app/data
     ports:
+      # Exposing for direct access/debugging if needed; Caddy will use the internal port.
       - "127.0.0.1:3001:3001"
     healthcheck:
       test: [ "CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3001/api/health" ]
@@ -48,7 +49,7 @@ services:
       - mcp-network
 
   caddy:
-    image: caddy:2.7-alpine
+    image: caddy:2-alpine
     container_name: mcp-caddy
     restart: unless-stopped
     volumes:
@@ -58,15 +59,9 @@ services:
     ports:
       - "80:80"
       - "443:443"
-      - "443:443/udp"
-    environment:
-      - DOMAIN=${DOMAIN:-localhost}
-      - EMAIL=${EMAIL:-your-email@example.com}
     depends_on:
-      backend:
-        condition: service_healthy
-      frontend:
-        condition: service_healthy
+      - backend
+      - frontend
     networks:
       - mcp-network
 
